# AdaptiveSegML

./: CMakeLists.txt  README.md
classique_kmeans/: CMakeLists.txt  classique_kmeans.py
classique_kmeans/Resources/UI/: classique_kmeans.ui
kmeans/: CMakeLists.txt  kmeans.py
kmeans/Resources/UI/: kmeans.ui
